@@ -62,24 +62,33 @@ enum  {
 
 typedef struct _listEntry
 {
+	// XXX do no change the order of these 3 fields. Needed for "subclassing"
 	struct	_listEntry	*prev, *next;
 	id					delegate;
+	// (end)
+
 	NSInteger			priority;
 	NSUInteger			flags;
 } tListEntry;
 
 typedef struct _listDeletedEntry
 {
+	// XXX do no change the order of these 3 fields. Needed for "subclassing"
 	struct	_listDeletedEntry	*prev, *next;
 	id							delegate;
+	// (end)
+	
 	struct	_listEntry			**listToBeDeleted;
 
 } tListDeletedEntry;
 
 typedef struct _listAddedEntry
 {
+	// XXX do no change the order of these 3 fields. Needed for "subclassing"
 	struct	_listAddedEntry *prev, *next;
 	id						delegate;
+	// (end)
+
 	NSInteger				priority;
 	NSUInteger				flags;
 	struct	_listEntry		**listToBeAdded;
@@ -93,6 +102,10 @@ typedef struct _listAddedEntry
 @end
 
 #pragma  mark - CCEventDispatcher
+
+@interface CCEventDispatcher()
+-(BOOL) removeDelegate:(id)delegate fromList:(tListEntry**)list;
+@end
 
 @implementation CCEventDispatcher
 
@@ -113,7 +126,7 @@ typedef struct _listAddedEntry
 		delegatesToBeAdded_ = NULL;
 		delegatesToBeRemoved_ = NULL;
 		
-		dispatchingInProgress_ = NO;
+		locked_ = NO;
 	}
 
 	return self;
@@ -125,17 +138,22 @@ typedef struct _listAddedEntry
 }
 
 #pragma mark CCEventDispatcher - add / remove delegates
+
+
 -(void) addLaterDelegate:(id)delegate priority:(NSInteger)priority flags:(NSUInteger)flags list:(tListEntry**)list
 {
-	tListAddedEntry *listElement = malloc( sizeof(*listElement) );
-	
-	listElement->delegate = [delegate retain];
-	listElement->priority = priority;
-	listElement->flags = flags;
-	listElement->listToBeAdded = list;
-	listElement->next = listElement->prev = NULL;
-	
-	DL_APPEND( delegatesToBeAdded_, listElement );
+	// Only add it if it was not already added for deletion
+	if( ! [self removeDelegate:delegate fromList:(tListEntry**)&delegatesToBeRemoved_] ) {
+		tListAddedEntry *listElement = malloc( sizeof(*listElement) );
+		
+		listElement->delegate = [delegate retain];
+		listElement->priority = priority;
+		listElement->flags = flags;
+		listElement->listToBeAdded = list;
+		listElement->next = listElement->prev = NULL;
+		
+		DL_APPEND( delegatesToBeAdded_, listElement );
+	}
 }
 
 -(void) addDelegate:(id)delegate priority:(NSInteger)priority flags:(NSUInteger)flags list:(tListEntry**)list
@@ -180,33 +198,38 @@ typedef struct _listAddedEntry
 
 -(void) removeLaterDelegate:(id)delegate fromList:(tListEntry**)list
 {
-	tListDeletedEntry *listElement = malloc( sizeof(*listElement) );
-	
-	listElement->delegate = [delegate retain];
-	listElement->listToBeDeleted = list;
-	listElement->next = listElement->prev = NULL;
-	
-	DL_APPEND( delegatesToBeRemoved_, listElement );
+	// Only add it if it was not already added for deletion
+	if( ! [self removeDelegate:delegate fromList:(tListEntry**)&delegatesToBeAdded_] ) {
+
+		tListDeletedEntry *listElement = malloc( sizeof(*listElement) );
+		
+		listElement->delegate = [delegate retain];
+		listElement->listToBeDeleted = list;
+		listElement->next = listElement->prev = NULL;
+		
+		DL_APPEND( delegatesToBeRemoved_, listElement );
+	}
 }
 
--(void) removeDelegate:(id)delegate fromList:(tListEntry**)list
+-(BOOL) removeDelegate:(id)delegate fromList:(tListEntry**)list
 {
 	tListEntry *entry, *tmp;
 	
-	// updates with priority < 0
 	DL_FOREACH_SAFE( *list, entry, tmp ) {
 		if( entry->delegate == delegate ) {
 			DL_DELETE( *list, entry );
 			[delegate release];
 			free(entry);
+			return YES;
 			break;
 		}
 	}
+	return NO;
 }
 
 -(void) removeAllDelegatesFromList:(tListEntry**)list
 {
-	NSAssert( ! dispatchingInProgress_, @"BUG. Open a ticket. Can't call this function when processing events.");
+	NSAssert( ! locked_, @"BUG. Open a ticket. Can't call this function when processing events.");
 
 	@synchronized(self) {
 		tListEntry *entry, *tmp;
@@ -242,7 +265,7 @@ typedef struct _listAddedEntry
 
 	flags |= ( [delegate respondsToSelector:@selector(ccScrollWheel:)] ? kCCImplementsScrollWheel : 0 );
 
-	if( dispatchingInProgress_ )
+	if( locked_ )
 		[self addLaterDelegate:delegate priority:priority flags:flags list:&mouseDelegates_];
 	else
 		[self addDelegate:delegate priority:priority flags:flags list:&mouseDelegates_];
@@ -251,7 +274,7 @@ typedef struct _listAddedEntry
 
 -(void) removeMouseDelegate:(id) delegate
 {
-	if( dispatchingInProgress_ )
+	if( locked_ )
 		[self removeLaterDelegate:delegate fromList:&mouseDelegates_];
 	else
 		[self removeDelegate:delegate fromList:&mouseDelegates_];
@@ -270,7 +293,7 @@ typedef struct _listAddedEntry
 	flags |= ( [delegate respondsToSelector:@selector(ccKeyDown:)] ? kCCImplementsKeyDown : 0 );
 	flags |= ( [delegate respondsToSelector:@selector(ccFlagsChanged:)] ? kCCImplementsFlagsChanged : 0 );
 
-	if( dispatchingInProgress_ )
+	if( locked_ )
 		[self addLaterDelegate:delegate priority:priority flags:flags list:&keyboardDelegates_];
 	else
 		[self addDelegate:delegate priority:priority flags:flags list:&keyboardDelegates_];
@@ -278,7 +301,7 @@ typedef struct _listAddedEntry
 
 -(void) removeKeyboardDelegate:(id) delegate
 {
-	if( dispatchingInProgress_ )
+	if( locked_ )
 		[self removeLaterDelegate:delegate fromList:&keyboardDelegates_];
 	else
 		[self removeDelegate:delegate fromList:&keyboardDelegates_];
@@ -298,7 +321,7 @@ typedef struct _listAddedEntry
 	flags |= ( [delegate respondsToSelector:@selector(ccTouchesEndedWithEvent:)] ? kCCImplementsTouchesEnded : 0 );
 	flags |= ( [delegate respondsToSelector:@selector(ccTouchesCancelledWithEvent:)] ? kCCImplementsTouchesCancelled : 0 );
 
-	if( dispatchingInProgress_ )
+	if( locked_ )
 		[self addLaterDelegate:delegate priority:priority flags:flags list:&touchDelegates_];
 	else
 		[self addDelegate:delegate priority:priority flags:flags list:&touchDelegates_];
@@ -306,7 +329,7 @@ typedef struct _listAddedEntry
 
 -(void) removeTouchDelegate:(id) delegate
 {
-	if( dispatchingInProgress_ )
+	if( locked_ )
 		[self removeLaterDelegate:delegate fromList:&touchDelegates_];
 	else
 		[self removeDelegate:delegate fromList:&touchDelegates_];
@@ -655,9 +678,9 @@ typedef struct _listAddedEntry
 
 		// Dispatch events
 		if( dispatchEvents_ ) {
-			dispatchingInProgress_ = YES;
+			locked_ = YES;
 			[self performSelector:selector onThread:[[CCDirector sharedDirector] runningThread] withObject:event waitUntilDone:YES];
-			dispatchingInProgress_ = NO;
+			locked_ = NO;
 		}
 		
 		
